# google-photos-slideshow

./: .gitignore  MANIFEST.in  README.md  build.sh  google_photos_slideshow.py  index.html  pyproject.toml  requirements.txt  slideshow.py
src/google_photos_slideshow/: __init__.py  google_photos_slideshow.py  index.html
