[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-photos-slideshow"
version = "0.0.5"
description = "A communal live photo slideshow for Google Photos"
readme = "README.md"
authors = [{ name = "Torin Halsted", email = "modularizer@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["google", "photos", "slideshow", "live", "photo", "frame"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "websockets",
    "PyYAML"
]

[project.urls]
Homepage = "https://github.com/modularizer/google-photos-slideshow"

[project.scripts]
google-photos-slideshow = "google_photos_slideshow:GooglePhotosSlideshow.main"
folder-slideshow = "google_photos_slideshow:FolderSlideshow.main"
slideshow = "google_photos_slideshow:main"



